# sparsefire

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run_pipeline.py
.github/workflows/: ci.yml
context/: kt_phase0.md
docs/: action_plan.md  architecture.md  brain_anchor.md  research_notes.md  results_schema.json  sparsefire_PRD_v1.md
results/: cliff_sweep.json  phase0_baseline.json  phase1_kvcache_cache_off.json  phase1_kvcache_cache_on.json  phase2_actsparse_25.json  phase2_actsparse_40.json  phase2_actsparse_50.json  phase2_actsparse_70.json  phase3_quant.json  phase3_quant_sparse50.json  phase4_attn_topk10.json  phase4_attn_topk30.json  phase4_attn_topk50.json
sparsefire/: __init__.py  _runner.py  activation_sparsity.py  attention_sparsity.py  baseline.py  cli.py  config.py  energy.py  evaluate.py  hooks.py  kv_cache.py  prompts.py  quantization.py  schema.py  visualize.py
tests/: test_baseline.py  test_config.py  test_energy.py  test_hooks.py  test_kv_cache.py  test_schema.py
